fix fixed modal headers broken in rebase

--- a/scss/_patterns_modal.scss
+++ b/scss/_patterns_modal.scss
@@ -55,6 +55,10 @@
     margin-bottom: $spv--small;
     // add padding to accommodate the width of p-modal__close
     padding-right: $icon-size + $sph--small * 2;
+    padding-top: $spv--large;
+    position: sticky;
+    top: 0;
+    z-index: 10;
   }
 
   .p-modal__title {
